@@ -7,11 +7,33 @@
     <groupId>org.example</groupId>
     <artifactId>testproject</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19.1</version>
+                <configuration>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>${basedir}src/test/java/testngxml/suite.xml</suiteXmlFile>
+<!--                        <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>-->
+                    </suiteXmlFiles>
+                    <properties>
+                        <!--<property>-->
+                        <!--<name>usedefaultlisteners</name>-->
+                        <!--<value>false</value>-->
+                        <!--</property>-->
+                    </properties>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <dependencies>
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-<!--            <version>6.9.10</version>-->
+            <!--            <version>6.9.10</version>-->
             <version>6.14.3</version>
         </dependency>
         <dependency>
@@ -32,18 +54,18 @@
             <scope>compile</scope>
         </dependency>
 
-            <!-- https://search.maven.org/remotecontent?filepath=javax/mail/javax.mail-api/1.5.6/javax.mail-api-1.5.6.jar -->
-            <dependency>
-                <groupId>javax.mail</groupId>
-                <artifactId>javax.mail-api</artifactId>
-                <version>1.5.6</version>
-            </dependency>
-            <!-- https://search.maven.org/remotecontent?filepath=javax/mail/mail/1.4.7/mail-1.4.7.jar -->
-            <dependency>
-                <groupId>javax.mail</groupId>
-                <artifactId>mail</artifactId>
-                <version>1.4.7</version>
-            </dependency>
+        <!-- https://search.maven.org/remotecontent?filepath=javax/mail/javax.mail-api/1.5.6/javax.mail-api-1.5.6.jar -->
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>javax.mail-api</artifactId>
+            <version>1.5.6</version>
+        </dependency>
+        <!-- https://search.maven.org/remotecontent?filepath=javax/mail/mail/1.4.7/mail-1.4.7.jar -->
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.7</version>
+        </dependency>
         <dependency>
             <groupId>commons-httpclient</groupId>
             <artifactId>commons-httpclient</artifactId>
@@ -71,7 +93,6 @@
             <artifactId>pdfbox</artifactId>
             <version>2.0.24</version>
         </dependency>
-
 
 
     </dependencies>
